<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/Red"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:onClick="buttononClickRed"
        android:text="@string/buttonRed"
        app:backgroundTint="#FF0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/Orange"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:onClick="buttononClickOrange"
        android:text="@string/buttonOrange"
        app:backgroundTint="#FF5809"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/Yellow"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:onClick="buttononClickYellow"
        android:text="@string/buttonYellow"
        app:backgroundTint="#F9F900"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/Green"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:onClick="buttononClickGreen"
        android:text="@string/buttonGreen"
        app:backgroundTint="#00DB00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/Blue"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:onClick="buttononClickBlue"
        android:text="@string/buttonBlue"
        app:backgroundTint="#2828FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/Indigo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:onClick="buttononClickIndigo"
        android:text="@string/buttonIndigo"
        app:backgroundTint="#0072E3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/Purple"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:onClick="buttononClickPurple"
        android:text="@string/buttonPurple"
        app:backgroundTint="#6F00D2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66"
        tools:ignore="MissingConstraints" />

    <ToggleButton
        android:id="@+id/Toggle_Button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/togglebutton_selector"

        android:textOff=""
        android:textOn=""

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.900"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.80"/>


</androidx.constraintlayout.widget.ConstraintLayout>